# shogun

./: .gitignore  CMakeLists.txt  Makefile.cvs
cmake/: ShogunCommon.cmake  (+2 more)
include/shogun/: CMakeLists.txt
include/shogun/base/: SGRefObject.h
include/shogun/classifier/: GaussianProcessBinaryClassification.h  LDA.h  LPBoost.h  LPM.h
include/shogun/classifier/mkl/: MKL.h
include/shogun/classifier/svm/: CPLEXSVM.h  NewtonSVM.h  QPBSVMLib.h  SVMLight.h  SVMLightOneClass.h
include/shogun/clustering/: GMM.h  KMeans.h
include/shogun/converter/: DiffusionMaps.h  FactorAnalysis.h  HessianLocallyLinearEmbedding.h  Isomap.h  KernelLocallyLinearEmbedding.h  LaplacianEigenmaps.h  LinearLocalTangentSpaceAlignment.h  LocalTangentSpaceAlignment.h  LocalityPreservingProjections.h  LocallyLinearEmbedding.h  ManifoldSculpting.h  MultidimensionalScaling.h  NeighborhoodPreservingEmbedding.h  StochasticProximityEmbedding.h  TDistributedStochasticNeighborEmbedding.h
include/shogun/converter/ica/: CMakeLists.txt  FFSep.h  FastICA.h  ICAConverter.h  Jade.h  JediSep.h  SOBI.h  UWedgeSep.h
include/shogun/distance/: CustomMahalanobisDistance.h  DirectorDistance.h  MahalanobisDistance.h
include/shogun/distributions/: Gaussian.h  HMM.h
include/shogun/distributions/classical/: GaussianDistribution.h
include/shogun/evaluation/: DirectorContingencyTableEvaluation.h
include/shogun/evaluation/ica/: AmariIndex.h  PermutationMatrix.h
include/shogun/features/: DataGenerator.h  DirectorDotFeatures.h  HashedDenseFeatures.h  HashedSparseFeatures.h
include/shogun/features/streaming/: StreamingHashedDenseFeatures.h  StreamingHashedSparseFeatures.h
include/shogun/io/: HDF5File.h  MLDataHDF5File.h  ProtobufFile.h  SerializableHdf5File.h  SerializableHdf5Reader00.h  SerializableJsonFile.h  SerializableJsonReader00.h  SerializableXmlFile.h  SerializableXmlReader00.h
include/shogun/io/streaming/: InputParser.h  ParseBuffer.h
include/shogun/kernel/: CombinedKernel.h  DirectorKernel.h  Kernel.h  ProductKernel.h
include/shogun/kernel/normalizer/: DiceKernelNormalizer.h  SqrtDiagKernelNormalizer.h  TanimotoKernelNormalizer.h
include/shogun/latent/: DirectorLatentModel.h
include/shogun/lib/: CMakeLists.txt  DynamicArray.h  DynamicObjectArray.h  RefCount.h  SGMatrix.h  config.h.in
include/shogun/machine/: DirectorKernelMachine.h  DirectorLinearMachine.h  GaussianProcessMachine.h
include/shogun/mathematics/: Cplex.h  Integration.h  JacobiEllipticFunctions.h  Math.h  Mosek.h  Statistics.h  eigen3.h  lapack.h
include/shogun/metric/: LMNN.h  LMNNImpl.h
include/shogun/modelselection/: GradientModelSelection.h
include/shogun/multiclass/: MCLDA.h  MulticlassLogisticRegression.h  MulticlassTreeGuidedLogisticRegression.h  QDA.h  ScatterSVM.h
include/shogun/preprocessor/: KernelPCA.h  PCA.h
include/shogun/regression/: GaussianProcessRegression.h  KernelRidgeRegression.h  LeastAngleRegression.h  LeastSquaresRegression.h  LinearRidgeRegression.h
include/shogun/statistics/: MMDKernelSelectionComb.h  MMDKernelSelectionCombMaxL2.h  MMDKernelSelectionCombOpt.h  QuadraticTimeMMD.h
include/shogun/structure/: BeliefPropagation.h  CCSOSVM.h  DirectorStructuredModel.h  DynProg.h  HMSVMModel.h  PlifMatrix.h  PrimalMosekSOSVM.h
include/shogun/ui/: GUICommands.h  GUIKernel.h  SGInterface.h
src/shogun/: CMakeLists.sublevel  CMakeLists.txt
src/shogun/base/: CMakeLists.txt  Parallel.cpp  SGObject.cpp  SGRefObject.cpp  Version.cpp
src/shogun/classifier/: GaussianProcessBinaryClassification.cpp  LDA.cpp  LPBoost.cpp  LPM.cpp
src/shogun/clustering/: GMM.cpp  Hierarchical.cpp  KMeans.cpp
src/shogun/converter/: DiffusionMaps.cpp  FactorAnalysis.cpp  HessianLocallyLinearEmbedding.cpp  Isomap.cpp  KernelLocallyLinearEmbedding.cpp  LaplacianEigenmaps.cpp  LinearLocalTangentSpaceAlignment.cpp  LocalTangentSpaceAlignment.cpp  LocalityPreservingProjections.cpp  LocallyLinearEmbedding.cpp  ManifoldSculpting.cpp  MultidimensionalScaling.cpp  NeighborhoodPreservingEmbedding.cpp  StochasticProximityEmbedding.cpp  TDistributedStochasticNeighborEmbedding.cpp
src/shogun/distance/: CMakeLists.txt  CustomMahalanobisDistance.cpp  Distance.cpp  MahalanobisDistance.cpp
src/shogun/distributions/: Gaussian.cpp  HMM.cpp
src/shogun/evaluation/: MachineEvaluation.cpp
src/shogun/features/: DataGenerator.cpp  DotFeatures.cpp  HashedWDFeatures.cpp  HashedWDFeaturesTransposed.cpp  SNPFeatures.cpp  StringFeatures.cpp  WDFeatures.cpp
src/shogun/io/: HDF5File.cpp  MLDataHDF5File.cpp  Parser.cpp  ProtobufFile.cpp  SerializableAsciiReader00.cpp  SerializableHdf5File.cpp  SerializableHdf5Reader00.cpp  SerializableJsonFile.cpp  SerializableJsonReader00.cpp  SerializableXmlFile.cpp  SerializableXmlReader00.cpp
src/shogun/kernel/: CombinedKernel.cpp  Kernel.cpp
src/shogun/latent/: DirectorLatentModel.cpp
src/shogun/lib/: Compressor.cpp  Lock.cpp  RefCount.cpp  SGMatrix.cpp  SGVector.cpp  memory.cpp
src/shogun/machine/: BaggingMachine.cpp  BaggingMachine.h  DistanceMachine.cpp  GaussianProcessMachine.cpp  KernelMachine.cpp
src/shogun/mathematics/: Cplex.cpp  Integration.cpp  JacobiEllipticFunctions.cpp  Math.cpp  Mosek.cpp  Random.cpp  Statistics.cpp  eigen3.cpp  lapack.cpp
src/shogun/metric/: LMNN.cpp  LMNNImpl.cpp
src/shogun/modelselection/: GradientModelSelection.cpp
src/shogun/multiclass/: MCLDA.cpp  MulticlassLogisticRegression.cpp  MulticlassTreeGuidedLogisticRegression.cpp  QDA.cpp  ScatterSVM.cpp
src/shogun/preprocessor/: KernelPCA.cpp  PCA.cpp  PNorm.cpp
src/shogun/regression/: GaussianProcessRegression.cpp  KernelRidgeRegression.cpp  LeastAngleRegression.cpp  LeastSquaresRegression.cpp  LinearRidgeRegression.cpp
src/shogun/statistics/: MMDKernelSelectionComb.cpp  MMDKernelSelectionCombMaxL2.cpp  MMDKernelSelectionCombOpt.cpp  QuadraticTimeMMD.cpp
src/shogun/structure/: CCSOSVM.cpp  DirectorStructuredModel.cpp  DynProg.cpp  FactorGraph.cpp  FactorGraphModel.cpp  PrimalMosekSOSVM.cpp
src/shogun/ui/: GUIClassifier.cpp  GUIConverter.cpp  GUIKernel.cpp  GUIPreprocessor.cpp  SGInterface.cpp
(+1231 files in other folders)
